--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "terminal.integrated.defaultProfile.osx": "",
     "cmake.configureOnOpen": true,
     "files.associations": {
-        "xlocale": "cpp"
+        "xlocale": "cpp",
+        "xstring": "cpp"
     }
 }
